# Ai-school

./: ## Plan: Add Promo Code Feature to Schoo.md  .gitignore  API_TESTING_QUICK_START.md
Admin/: fix_encoding.js  package-lock.json  package.json
Backend/: .dockerignore  .env  API_QUICK_REFERENCE.md  API_TESTING_GUIDE.md  API_TESTING_README.md  Cargo.toml  Dockerfile  MODEL_ALIGNMENT_OPTIMIZATION.md  OPTIMIZATION_SUMMARY.md  Student_API_Tests.postman_collection.json  TESTING_COMPLETE_REPORT.md  TESTING_SUMMARY.md  USER_API_QUICK_REFERENCE.md  USER_API_VISUAL_FLOWS.md  USER_API_WORKFLOW.md  compile_errors.txt  docker-compose.yml  test_apis.ps1  test_apis.sh  verify_billing_v2.sh  verify_promo.sh
Backend/examples/: gen_hash.rs
Backend/migrations/: 202602180000_init.sql  202602230000_optimize_student_queries.sql  202603040000_subject_student_update.sql  202603050000_custom_fees.sql  fix_schema.sql
Backend/src/: db.rs  gen_hash_tmp.rs  main.rs
Backend/src/logic/: mod.rs  ocr_pipeline.rs
Backend/src/models/: academic.rs  auth.rs  mod.rs  user.rs
Backend/src/repository/: mod.rs  postgres.rs  traits.rs
Backend/src/routes/: announcement.rs  attendance.rs  auth.rs  award.rs  class.rs  complains.rs  documentUpload.rs  documentbox.rs  employees.rs  emppay.rs  events.rs  exam.rs  fees.rs  leave.rs  materials.rs  mobile.rs  mod.rs  ocr.rs  reminder.rs  responsibility.rs  school.rs  setup.rs  spaces.rs  students.rs  subjects.rs  task.rs  topic.rs
Backend/src/services/: academic_service.rs  auth_service.rs  auxiliary_service.rs  employee_service.rs  leave_service.rs  mod.rs  operations_service.rs  resource_service.rs  setup_service.rs  student_service.rs  traits.rs
Backend/src/super_admin/: billing_job.rs  mod.rs  routes.rs  service.rs
Vidhyam/: index.html  (+3 more)
(+164 files in other folders)
